# rasterfakers

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
examples/: README.md  basic_usage.rs  cli_examples.sh  cog.rs  custom_pattern.rs  multiband.rs
src/: conversions.rs  error.rs  geotiff.rs  lib.rs  main.rs  patterns.rs
tests/: builder_tests.rs  patterns_tests.rs
