[package]
name = "rasterfakers"
version = "0.1.0"
edition = "2021"
description = "A Rust library and CLI tool to generate fake GeoTIFF files for testing and fixtures."
authors = ["Prayag Thakkar <th.prayag@outlook.com>"]
license = "MIT"
repository = "https://github.com/pt20/rasterfakers"
documentation = "https://docs.rs/rasterfakers"
homepage = "https://github.com/pt20/rasterfakers"
readme = "README.md"
keywords = ["geotiff", "testing", "fixtures", "gis", "raster"]
categories = ["command-line-utilities", "development-tools::testing"]
exclude = ["/target", "/.git", "/.github", "/.vscode"]

[dependencies]
gdal = { version = "0.17.0", features = ["bindgen"] }
clap = { version = "4.5.17", features = ["derive"] }

[lib]
name = "rasterfakers"
path = "src/lib.rs"

[[bin]]
name = "rasterfakers"
path = "src/main.rs"
