[package]
name = "rasterfakers"
version = "0.1.1"
edition = "2021"
description = "A Rust library and CLI tool to generate fake GeoTIFF files for testing and fixtures."
authors = ["Prayag Thakkar <th.prayag@outlook.com>"]
license = "MIT"
repository = "https://github.com/pt20/rasterfakers"
documentation = "https://docs.rs/rasterfakers"
homepage = "https://github.com/pt20/rasterfakers"
readme = "README.md"
keywords = ["geotiff", "testing", "fixtures", "gis", "raster"]
categories = ["command-line-utilities", "development-tools::testing"]
exclude = ["/target", "/.git", "/.github", "/.vscode"]

[dependencies]
gdal = { version = "0.17.0", features = ["bindgen"] }
clap = { version = "4.5.17", features = ["derive"] }
thiserror = "1.0.63"

[lib]
name = "rasterfakers"
path = "src/lib.rs"

[[bin]]
name = "rasterfakers"
path = "src/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "custom_pattern"
path = "examples/custom_pattern.rs"

[[example]]
name = "multiband"
path = "examples/multiband.rs"
